FLOE-198: Fixed line spacing in the feedback demo
Set a default line-height on the body and set <p> in the demo markup to inherit. This overrides foundation's default line-height and allows the line spacing enactor to set the line-height.

--- a/demos/feedback/css/feedbackDemo.css
+++ b/demos/feedback/css/feedbackDemo.css
@@ -14,6 +14,15 @@
     font-weight: bold;
 }
 
+body {
+    line-height: 1.6;
+}
+
+.gpii-feedbackDemo-demo p {
+    /* ensure that line-height is inherited from the body so that UIO's line spacing enactor works */
+    line-height: inherit;
+}
+
 .gpii-feedbackDemo-demo {
     font-family: "OpenSans","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
     background-color: #F4F4E9;
